--- a/src/main/webapp/app/entities/table-of-prizes/table-of-prizes-preview.component.html
+++ b/src/main/webapp/app/entities/table-of-prizes/table-of-prizes-preview.component.html
@@ -1,33 +1,25 @@
 <div class="row justify-content-center">
-    <div class="col-10">
-        <div *ngIf="tableOfPrizes">
-            <h2><span jhiTranslate="TableOfPrizesApp.tableOfPrizes.detail.title">Table Of Prizes</span> {{ tableOfPrizes.name }}</h2>
+    <ng-container *ngIf="tableOfPrizes">
 
-            <hr>
+        <h1 class="col-12"><span jhiTranslate="TableOfPrizesApp.tableOfPrizes.detail.title">Table Of Prizes</span> {{ tableOfPrizes.name }}</h1>
 
-            <jhi-alert-error></jhi-alert-error>
+        <ng-container *ngFor="let prize of tableOfPrizes.prizes">
+            <div *ngFor="let item of [].constructor(prize.quantity); let i = index"
+                class="card prizecard col-11 col-sm-5">
+                <img class="card-img-top" [src]="prize.image?.url">
+                <div class="card-body">
+                    <h2 class="card-title">{{ prize.image?.name }} - #{{ i + 1 }}</h2>
+                </div>
+            </div>
+        </ng-container>
 
-            <dl class="row-md jh-entity-details">
-                <dt><span jhiTranslate="TableOfPrizesApp.tableOfPrizes.name">Name</span></dt>
-                <dd>
-                    <span>{{ tableOfPrizes.name }}</span>
-                </dd>
-
-                <dt><span jhiTranslate="TableOfPrizesApp.tableOfPrizes.contents">Contents</span></dt>
-                <dd>
-                    <div class="row bottom-buffer" *ngFor="let prize of tableOfPrizes.prizes">
-                        <div class="col-sm-2 col-2">{{ prize.quantity }}</div>
-                        <div class="col-sm-5 col-10">{{ prize.image?.name }}</div>
-                        <div class="col-sm-5"><img class="thumbnail" [src]="prize.image?.url"></div>
-                    </div>
-                </dd>
-            </dl>
-
+        <div class="col-12">
             <button type="submit"
-                    (click)="previousState()"
-                    class="btn btn-info">
+                (click)="previousState()"
+                class="btn btn-info">
                 <fa-icon icon="arrow-left"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back">Back</span>
             </button>
         </div>
-    </div>
+        
+    </ng-container>
 </div>
